--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,8 +39,8 @@
   <meta property="twitter:image" content="/og-image.jpg" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -94,7 +94,7 @@
 
 <body>
   <!-- Anti-Debug Himoya — DevTools ochilganda debugger ga tushadi -->
-  <script src="/anti-debug.js"></script>
+  <script src="anti-debug.js"></script>
   <noscript>
     <div style="text-align: center; padding: 2rem;">
       <h1>JavaScript Kerak</h1>
@@ -102,7 +102,7 @@
     </div>
   </noscript>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="src/main.jsx"></script>
 </body>
 
 </html>
